--- a/blogpost.html
+++ b/blogpost.html
@@ -23,6 +23,9 @@
                 </p>
                 <p>Suscribete y dale like</p>
         </div>
+        <div id="footer">
+            <p>Hecho con amor en Platzi </p>
+        </div>
     </div>
 </body>
 </html>
