--- a/blogpost.html
+++ b/blogpost.html
@@ -18,6 +18,7 @@
             <h1>Este es el título atractivo e interesante del post</h1>
             <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar las cosas incre&iacute;bles que se pueden hacer
                 con ramas </p>
+                <p><img src="imagenes/equipo_nuxiba.jpg" alt="equipo_nuxiba" width="100%"></p>
                 <p>Los blogs son la mejor forma de compartir información y tus ideas.
                     Mucho más que ir a conferencias o salir en Youtube. Excepto si eres un rockstar.
                     Pero estadísticamente no lo eres.... por ahora
